--- a/Assignment1/Assignment 1.ipynb
+++ b/Assignment1/Assignment 1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,15 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  4  35  66  59  75  26  45 100  18  20  20  21  84  69  64  76  14  92\n",
-      "  64  48]\n"
+      "[99 76 88 95 69 57  5 34 73 32 25  5 66 72 61 89 99 68 14 81]\n"
      ]
     }
    ],
@@ -56,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,16 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[12 11 20]\n",
-      " [15 10 12]\n",
-      " [18 15 14]]\n"
+      "[[17 17 17]\n",
+      " [14 18 14]\n",
+      " [12 13 14]]\n"
      ]
     }
    ],
@@ -172,17 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 4  7  1  9 10]\n",
-      " [ 5 10  2  4  9]\n",
-      " [ 8  9  2  4  8]\n",
-      " [ 3  6  3  7  4]]\n",
+      "[[ 5  4 10  2  6]\n",
+      " [10  6  9  4  4]\n",
+      " [ 5 10  8  4  7]\n",
+      " [ 5  3  9  5  7]]\n",
       "shape of array: (4, 5)\n",
       "size of array: 20\n",
       "number of dimensions of array: 2\n",
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,21 +209,21 @@
      "output_type": "stream",
      "text": [
       "number of dimenstions of \n",
-      "[6 3 1 8 1]\n",
+      "[7 5 6 2 8]\n",
       " is: 1\n",
       "number of dimenstions of \n",
-      "[[ 4  2 10  7]\n",
-      " [ 5  6  9  6]\n",
-      " [ 8  7  9  3]]\n",
+      "[[ 3  6  3  7]\n",
+      " [ 6 10  4  2]\n",
+      " [ 3  4  8  8]]\n",
       " is: 2\n",
       "number of dimenstions of \n",
-      "[[[ 1  3  4  6]\n",
-      "  [10  4  7  4]\n",
-      "  [ 4  5  1  8]]\n",
+      "[[[ 4  9 10  5]\n",
+      "  [ 6  1  8  5]\n",
+      "  [ 1  3  6  5]]\n",
       "\n",
-      " [[ 3 10  6  1]\n",
-      "  [ 8 10  7  9]\n",
-      "  [ 3  6  2  4]]]\n",
+      " [[ 8  8  1  7]\n",
+      "  [ 7  1  8  6]\n",
+      "  [10  9  5  1]]]\n",
       " is: 3\n"
      ]
     }
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +252,7 @@
      "output_type": "stream",
      "text": [
       "int64\n",
-      "[31.  87.   2.5  2.5 31.  17.  30.  78.  91.   5. ]\n",
+      "[29.  17.   2.5  2.5 93.  52.  88.  59.  78.  45. ]\n",
       "float64\n",
       "['There' 'once' 'was' 'a' 'ship' 'that' 'put' 'to' 'sea']\n",
       "<U5\n"
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -289,17 +288,17 @@
      "output_type": "stream",
      "text": [
       "Initially, the array is: \n",
-      " [[4 2 9]\n",
-      " [2 2 3]\n",
-      " [9 7 4]\n",
-      " [3 4 2]\n",
-      " [8 5 6]\n",
-      " [8 9 7]]\n",
+      " [[8 6 9]\n",
+      " [3 7 2]\n",
+      " [4 4 2]\n",
+      " [4 6 9]\n",
+      " [2 3 7]\n",
+      " [6 4 4]]\n",
       "The shape of the array is: (6, 3)\n",
       "Array after reshaping is:\n",
-      " [[4 2 9 2 2 3]\n",
-      " [9 7 4 3 4 2]\n",
-      " [8 5 6 8 9 7]]\n",
+      " [[8 6 9 3 7 2]\n",
+      " [4 4 2 4 6 9]\n",
+      " [2 3 7 6 4 4]]\n",
       "New shape of the array is: (3, 6)\n"
      ]
     }
@@ -319,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -330,9 +329,9 @@
       " [0 0 0 0]\n",
       " [0 0 0 0]]\n",
       "8\n",
-      "[[7 8 7 1]\n",
-      " [8 7 7 4]\n",
-      " [2 9 2 7]]\n",
+      "[[3 1 1 1]\n",
+      " [7 7 3 3]\n",
+      " [8 5 8 3]]\n",
       "4\n",
       "[2.1  4.5  6.32]\n",
       "8\n"
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -371,19 +370,19 @@
      "output_type": "stream",
      "text": [
       "Original array: \n",
-      " [[ 2  4  7]\n",
-      " [ 4  3  4]\n",
-      " [ 4  1  3]\n",
-      " [10  9  5]\n",
-      " [ 7  7  4]\n",
-      " [ 8  8  4]]\n",
+      " [[ 9  9  4]\n",
+      " [ 7  9  3]\n",
+      " [ 6  3  7]\n",
+      " [ 4  5  3]\n",
+      " [10  5  1]\n",
+      " [ 4  6  7]]\n",
       "Sorted array: \n",
-      " [[ 2  4  7]\n",
-      " [ 3  4  4]\n",
-      " [ 1  3  4]\n",
-      " [ 5  9 10]\n",
-      " [ 4  7  7]\n",
-      " [ 4  8  8]]\n"
+      " [[ 4  9  9]\n",
+      " [ 3  7  9]\n",
+      " [ 3  6  7]\n",
+      " [ 3  4  5]\n",
+      " [ 1  5 10]\n",
+      " [ 4  6  7]]\n"
      ]
     }
    ],
@@ -397,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -425,14 +424,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 2 2 2]\n"
+      "[1 3 3 3 5]\n"
      ]
     }
    ],
@@ -446,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -477,13 +476,13 @@
      "output_type": "stream",
      "text": [
       "Originally, the array is: \n",
-      " [[ 3  6  5]\n",
-      " [ 9  4 10]\n",
-      " [ 4  7  9]]\n",
+      " [[ 7  1 10]\n",
+      " [ 6  1  7]\n",
+      " [ 9  8  1]]\n",
       "Array after sorting along rows is:\n",
-      " [[ 3  5  6]\n",
-      " [ 4  9 10]\n",
-      " [ 4  7  9]]\n"
+      " [[ 1  7 10]\n",
+      " [ 1  6  7]\n",
+      " [ 1  8  9]]\n"
      ]
     }
    ],
@@ -497,14 +496,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[60 65 75 87 98]\n"
+      "[67 67 72 94 95]\n"
      ]
     }
    ],
@@ -517,15 +516,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-12  25  29 -29  29  30  34 -38 -39 -46  47 -58  63  64  65  70  71 -80\n",
-      " -88  94]\n"
+      "[ -5  -9  11 -11  13  19 -21  25  37  39  46  46 -53 -57  60 -74  79  82\n",
+      " -89 -97]\n"
      ]
     }
    ],
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -546,19 +545,19 @@
      "output_type": "stream",
      "text": [
       "Original Array:\n",
-      " [75 95 66 18 99  8 44 50 39 35  1 72 52 31 76 63 74 90 68  5 45 54 38 12\n",
-      " 52 25 59 58 94 88 34 66 88 89 87 30 94 35 99 14 54 50 60 48 36 50 99  3\n",
-      " 13 73]\n",
+      " [ 61  32  41   2  11  23  38  78  38  61  28  18  50   9  96  52  50  80\n",
+      "  54  89  51   8  55  89  11  73  17  77  61  14  46  92   6  20  76  74\n",
+      "  67  70  66  20  82 100  93  86   9  64  58  70  41  29]\n",
       "Mask:\n",
-      " [ True  True  True False  True False  True  True  True  True False  True\n",
-      "  True  True  True  True  True  True  True False  True  True  True False\n",
-      "  True False  True  True  True  True  True  True  True  True  True False\n",
-      "  True  True  True False  True  True  True  True  True  True  True False\n",
-      " False  True]\n",
+      " [ True  True  True False False False  True  True  True  True False False\n",
+      "  True False  True  True  True  True  True  True  True False  True  True\n",
+      " False  True False  True  True False  True  True False False  True  True\n",
+      "  True  True  True False  True  True  True  True False  True  True  True\n",
+      "  True False]\n",
       "Required Array:\n",
-      " [31 34 35 18 35  8 36 38 39 44  1 45 48 50 50 50 52 52 54  5 54 58 59 12\n",
-      " 60 25 63 66 66 68 72 73 74 75 76 30 87 88 88 14 89 90 94 94 95 99 99  3\n",
-      " 13 99]\n"
+      " [ 32  38  38   2  11  23  41  41  46  50  28  18  50   9  51  52  54  55\n",
+      "  58  61  61   8  61  64  11  66  17  67  70  14  70  73   6  20  74  76\n",
+      "  77  78  80  20  82  86  89  89   9  92  93  96 100  29]\n"
      ]
     }
    ],
@@ -597,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +837,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#indexing\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#indexing\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "\u001b[1;31mIndexError\u001b[0m: index 7 is out of bounds for axis 0 with size 5"
      ]
     }
