--- a/Assignment1/Assignment 1.ipynb
+++ b/Assignment1/Assignment 1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[99 76 88 95 69 57  5 34 73 32 25  5 66 72 61 89 99 68 14 81]\n"
+      "[92 59 93 30 92 17 25 46 24 86 92 25 14 66 71 10  7 78 48 11]\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,23 +136,24 @@
    ],
    "source": [
     "#5\n",
-    "testArray = np.zeros(10, dtype = int)\n",
+    "testArray = np.zeros(10, dtype = np.int32)\n",
     "testArray[::2] = 1\n",
     "print(testArray)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[17 17 17]\n",
-      " [14 18 14]\n",
-      " [12 13 14]]\n"
+      "[12 18 17]\n",
+      "[[19 16 12]\n",
+      " [12 18 17]\n",
+      " [12 12 17]]\n"
      ]
     }
    ],
@@ -171,17 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 5  4 10  2  6]\n",
-      " [10  6  9  4  4]\n",
-      " [ 5 10  8  4  7]\n",
-      " [ 5  3  9  5  7]]\n",
+      "[[ 1  3  9  6  3]\n",
+      " [ 2  3  3  4 10]\n",
+      " [ 5  3  8  4  2]\n",
+      " [10  6  2  2  9]]\n",
       "shape of array: (4, 5)\n",
       "size of array: 20\n",
       "number of dimensions of array: 2\n",
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -209,21 +210,21 @@
      "output_type": "stream",
      "text": [
       "number of dimenstions of \n",
-      "[7 5 6 2 8]\n",
+      "[ 5  4  5  9 10]\n",
       " is: 1\n",
       "number of dimenstions of \n",
-      "[[ 3  6  3  7]\n",
-      " [ 6 10  4  2]\n",
-      " [ 3  4  8  8]]\n",
+      "[[2 1 9 3]\n",
+      " [3 9 1 6]\n",
+      " [9 7 4 6]]\n",
       " is: 2\n",
       "number of dimenstions of \n",
-      "[[[ 4  9 10  5]\n",
-      "  [ 6  1  8  5]\n",
-      "  [ 1  3  6  5]]\n",
+      "[[[ 3  6 10  8]\n",
+      "  [ 2  6  7  8]\n",
+      "  [ 8 10  2  6]]\n",
       "\n",
-      " [[ 8  8  1  7]\n",
-      "  [ 7  1  8  6]\n",
-      "  [10  9  5  1]]]\n",
+      " [[ 1  6  4  6]\n",
+      "  [ 1  6  6 10]\n",
+      "  [ 5  5  2  7]]]\n",
       " is: 3\n"
      ]
     }
@@ -244,15 +245,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "int64\n",
-      "[29.  17.   2.5  2.5 93.  52.  88.  59.  78.  45. ]\n",
+      "int32\n",
+      "[38.  99.   2.5  2.5 61.  37.  80.  59.   2.  29. ]\n",
       "float64\n",
       "['There' 'once' 'was' 'a' 'ship' 'that' 'put' 'to' 'sea']\n",
       "<U5\n"
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -288,17 +289,17 @@
      "output_type": "stream",
      "text": [
       "Initially, the array is: \n",
-      " [[8 6 9]\n",
-      " [3 7 2]\n",
-      " [4 4 2]\n",
-      " [4 6 9]\n",
-      " [2 3 7]\n",
-      " [6 4 4]]\n",
+      " [[ 7  1  3]\n",
+      " [ 6  2 10]\n",
+      " [ 7  1  8]\n",
+      " [ 3  5  7]\n",
+      " [ 7  8  9]\n",
+      " [ 9  5  8]]\n",
       "The shape of the array is: (6, 3)\n",
       "Array after reshaping is:\n",
-      " [[8 6 9 3 7 2]\n",
-      " [4 4 2 4 6 9]\n",
-      " [2 3 7 6 4 4]]\n",
+      " [[ 7  1  3  6  2 10]\n",
+      " [ 7  1  8  3  5  7]\n",
+      " [ 7  8  9  9  5  8]]\n",
       "New shape of the array is: (3, 6)\n"
      ]
     }
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -329,9 +330,9 @@
       " [0 0 0 0]\n",
       " [0 0 0 0]]\n",
       "8\n",
-      "[[3 1 1 1]\n",
-      " [7 7 3 3]\n",
-      " [8 5 8 3]]\n",
+      "[[ 7  7  1  4]\n",
+      " [ 2  3  8  1]\n",
+      " [ 5  8 10  9]]\n",
       "4\n",
       "[2.1  4.5  6.32]\n",
       "8\n"
@@ -362,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -370,19 +371,19 @@
      "output_type": "stream",
      "text": [
       "Original array: \n",
-      " [[ 9  9  4]\n",
-      " [ 7  9  3]\n",
-      " [ 6  3  7]\n",
-      " [ 4  5  3]\n",
-      " [10  5  1]\n",
-      " [ 4  6  7]]\n",
+      " [[ 5  7  1]\n",
+      " [ 4  6  6]\n",
+      " [ 6  4  7]\n",
+      " [ 9  3  5]\n",
+      " [ 5 10  8]\n",
+      " [ 3  6  8]]\n",
       "Sorted array: \n",
-      " [[ 4  9  9]\n",
-      " [ 3  7  9]\n",
-      " [ 3  6  7]\n",
-      " [ 3  4  5]\n",
-      " [ 1  5 10]\n",
-      " [ 4  6  7]]\n"
+      " [[ 1  5  7]\n",
+      " [ 4  6  6]\n",
+      " [ 4  6  7]\n",
+      " [ 3  5  9]\n",
+      " [ 5  8 10]\n",
+      " [ 3  6  8]]\n"
      ]
     }
    ],
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -424,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 3 3 3 5]\n"
+      "[1 2 4 4 6]\n"
      ]
     }
    ],
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -476,13 +477,13 @@
      "output_type": "stream",
      "text": [
       "Originally, the array is: \n",
-      " [[ 7  1 10]\n",
-      " [ 6  1  7]\n",
-      " [ 9  8  1]]\n",
+      " [[ 7  8 10]\n",
+      " [ 6  3  8]\n",
+      " [10  5 10]]\n",
       "Array after sorting along rows is:\n",
-      " [[ 1  7 10]\n",
-      " [ 1  6  7]\n",
-      " [ 1  8  9]]\n"
+      " [[ 7  8 10]\n",
+      " [ 3  6  8]\n",
+      " [ 5 10 10]]\n"
      ]
     }
    ],
@@ -496,14 +497,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[67 67 72 94 95]\n"
+      "[ 78  86  88  95 100]\n"
      ]
     }
    ],
@@ -516,15 +517,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -5  -9  11 -11  13  19 -21  25  37  39  46  46 -53 -57  60 -74  79  82\n",
-      " -89 -97]\n"
+      "[  3  15  16  18 -24  29  31 -37 -39  41 -47  54  56  57 -58  65  66 -75\n",
+      "  79 -84]\n"
      ]
     }
    ],
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -545,19 +546,19 @@
      "output_type": "stream",
      "text": [
       "Original Array:\n",
-      " [ 61  32  41   2  11  23  38  78  38  61  28  18  50   9  96  52  50  80\n",
-      "  54  89  51   8  55  89  11  73  17  77  61  14  46  92   6  20  76  74\n",
-      "  67  70  66  20  82 100  93  86   9  64  58  70  41  29]\n",
+      " [45 13 15 54 22 32 98 52 63 79 95 72 60  9 19 49 11 84 60 63 27  7 82 62\n",
+      " 62 65 72 89 21 87 18 13 33 37  9 69 21 29 78 42 14 20 30 87 11 56 52 38\n",
+      " 61 89]\n",
       "Mask:\n",
-      " [ True  True  True False False False  True  True  True  True False False\n",
-      "  True False  True  True  True  True  True  True  True False  True  True\n",
-      " False  True False  True  True False  True  True False False  True  True\n",
-      "  True  True  True False  True  True  True  True False  True  True  True\n",
-      "  True False]\n",
+      " [ True False False  True False  True  True  True  True  True  True  True\n",
+      "  True False False  True False  True  True  True False False  True  True\n",
+      "  True  True  True  True False  True False False  True  True False  True\n",
+      " False False  True  True False False False  True False  True  True  True\n",
+      "  True  True]\n",
       "Required Array:\n",
-      " [ 32  38  38   2  11  23  41  41  46  50  28  18  50   9  51  52  54  55\n",
-      "  58  61  61   8  61  64  11  66  17  67  70  14  70  73   6  20  74  76\n",
-      "  77  78  80  20  82  86  89  89   9  92  93  96 100  29]\n"
+      " [32 13 15 33 22 37 38 42 45 49 52 52 54  9 19 56 11 60 60 61 27  7 62 62\n",
+      " 63 63 65 69 21 72 18 13 72 78  9 79 21 29 82 84 14 20 30 87 11 87 89 89\n",
+      " 95 98]\n"
      ]
     }
    ],
@@ -596,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +838,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#indexing\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#indexing\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43marr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\u001b[43m]\u001b[49m)\n",
       "\u001b[1;31mIndexError\u001b[0m: index 7 is out of bounds for axis 0 with size 5"
      ]
     }
