--- a/Lab2/Lab2_Pandas_Matplotlib.ipynb
+++ b/Lab2/Lab2_Pandas_Matplotlib.ipynb
@@ -979,16 +979,221 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Salary</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>John</td>\n",
+              "      <td>29</td>\n",
+              "      <td>50000</td>\n",
+              "      <td>HR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Sara</td>\n",
+              "      <td>35</td>\n",
+              "      <td>60000</td>\n",
+              "      <td>Finance</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>40</td>\n",
+              "      <td>75000</td>\n",
+              "      <td>IT</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Alex</td>\n",
+              "      <td>25</td>\n",
+              "      <td>45000</td>\n",
+              "      <td>HR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Julia</td>\n",
+              "      <td>31</td>\n",
+              "      <td>52000</td>\n",
+              "      <td>IT</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    Name  Age  Salary Department\n",
+              "0   John   29   50000         HR\n",
+              "1   Sara   35   60000    Finance\n",
+              "2    Tom   40   75000         IT\n",
+              "3   Alex   25   45000         HR\n",
+              "4  Julia   31   52000         IT"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "data = {\n",
         "    'Name': ['John', 'Sara', 'Tom', 'Alex', 'Julia'],\n",
         "    'Age': [29, 35, 40, 25, 31],\n",
         "    'Salary': [50000, 60000, 75000, 45000, 52000],\n",
         "    'Department': ['HR', 'Finance', 'IT', 'HR', 'IT']\n",
-        "}"
+        "}\n",
+        "\n",
+        "df = pd.DataFrame(data)\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Name</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Salary</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Tom</td>\n",
+              "      <td>40</td>\n",
+              "      <td>75000</td>\n",
+              "      <td>IT</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  Name  Age  Salary Department\n",
+              "2  Tom   40   75000         IT"
+            ]
+          },
+          "execution_count": 29,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Selecting the row corresponding to Tom\n",
+        "row = df.loc[df['Name'] == 'Tom']\n",
+        "row"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Salary</th>\n",
+              "      <th>Department</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>50000</td>\n",
+              "      <td>HR</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>60000</td>\n",
+              "      <td>Finance</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Salary Department\n",
+              "0   50000         HR\n",
+              "1   60000    Finance"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "subdf = df.iloc[:2, [2,3]]\n",
+        "subdf"
       ]
     },
     {
