Changed a few more cells in Lab2

--- a/Lab2/Lab2_Pandas_Matplotlib.ipynb
+++ b/Lab2/Lab2_Pandas_Matplotlib.ipynb
@@ -477,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -571,7 +571,7 @@
               "5       563748  Grestin             IT   76000   7600.0"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -588,7 +588,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -665,7 +665,7 @@
               "      <td>563748</td>\n",
               "      <td>Grestin</td>\n",
               "      <td>IT</td>\n",
-              "      <td>109440</td>\n",
+              "      <td>91200</td>\n",
               "      <td>7600.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -679,10 +679,10 @@
               "2       675030  Jeffrey    Development   59000   5900.0\n",
               "3       489434   Walter  Manufacturing   90000   9000.0\n",
               "4       684387    Pablo             HR  100000  10000.0\n",
-              "5       563748  Grestin             IT  109440   7600.0"
+              "5       563748  Grestin             IT   91200   7600.0"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -695,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -765,7 +765,7 @@
               "      <th>5</th>\n",
               "      <td>563748</td>\n",
               "      <td>Grestin</td>\n",
-              "      <td>109440</td>\n",
+              "      <td>91200</td>\n",
               "      <td>7600.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -779,10 +779,10 @@
               "2       675030  Jeffrey   59000   5900.0\n",
               "3       489434   Walter   90000   9000.0\n",
               "4       684387    Pablo  100000  10000.0\n",
-              "5       563748  Grestin  109440   7600.0"
+              "5       563748  Grestin   91200   7600.0"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -827,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -885,7 +885,7 @@
               "4       E5         HR   52000                 8.0                 4"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -929,7 +929,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -979,7 +979,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -1058,7 +1058,7 @@
               "4  Julia   31   52000         IT"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1077,7 +1077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -1124,7 +1124,7 @@
               "2  Tom   40   75000         IT"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1137,7 +1137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -1186,7 +1186,7 @@
               "1   60000    Finance"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1229,7 +1229,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -1242,7 +1242,7 @@
               "Name: Score, dtype: float64"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1279,6 +1279,201 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th>ProductCategory</th>\n",
+              "      <th>Sales</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Region</th>\n",
+              "      <th>StoreID</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">North</th>\n",
+              "      <th>1</th>\n",
+              "      <td>Electronics</td>\n",
+              "      <td>5000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Clothing</td>\n",
+              "      <td>7000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Electronics</td>\n",
+              "      <td>8000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"2\" valign=\"top\">South</th>\n",
+              "      <th>3</th>\n",
+              "      <td>Clothing</td>\n",
+              "      <td>6000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Electronics</td>\n",
+              "      <td>4500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"3\" valign=\"top\">East</th>\n",
+              "      <th>4</th>\n",
+              "      <td>Clothing</td>\n",
+              "      <td>7200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Electronics</td>\n",
+              "      <td>3100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Clothing</td>\n",
+              "      <td>5600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th rowspan=\"2\" valign=\"top\">West</th>\n",
+              "      <th>6</th>\n",
+              "      <td>Electronics</td>\n",
+              "      <td>4000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Clothing</td>\n",
+              "      <td>3000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "               ProductCategory  Sales\n",
+              "Region StoreID                       \n",
+              "North  1           Electronics   5000\n",
+              "       1              Clothing   7000\n",
+              "       2           Electronics   8000\n",
+              "South  3              Clothing   6000\n",
+              "       3           Electronics   4500\n",
+              "East   4              Clothing   7200\n",
+              "       4           Electronics   3100\n",
+              "       5              Clothing   5600\n",
+              "West   6           Electronics   4000\n",
+              "       6              Clothing   3000"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "data = {\n",
+        "    'Region': ['North', 'North', 'North', 'South', 'South', 'East', 'East', 'East', 'West', 'West'],\n",
+        "    'StoreID': [1, 1, 2, 3, 3, 4, 4, 5, 6, 6],\n",
+        "    'ProductCategory': ['Electronics', 'Clothing', 'Electronics', 'Clothing', 'Electronics',\n",
+        "                        'Clothing', 'Electronics', 'Clothing', 'Electronics', 'Clothing'],\n",
+        "    'Sales': [5000, 7000, 8000, 6000, 4500, 7200, 3100, 5600, 4000, 3000]\n",
+        "}\n",
+        "\n",
+        "# Convert the dataset into a DataFrame\n",
+        "df = pd.DataFrame(data)\n",
+        "\n",
+        "# Set the hierarchical index\n",
+        "df.set_index(['Region', 'StoreID'], inplace = True)\n",
+        "\n",
+        "# Display the DataFrame\n",
+        "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Region\n",
+              "East     15900\n",
+              "North    20000\n",
+              "South    10500\n",
+              "West      7000\n",
+              "Name: Sales, dtype: int64"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Grouping by region\n",
+        "sumSet = df.groupby(level = \"Region\")\n",
+        "\n",
+        "# Calculating the sum and displaying\n",
+        "sumSet['Sales'].sum()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "StoreID\n",
+              "1    6000.0\n",
+              "2    8000.0\n",
+              "3    5250.0\n",
+              "4    5150.0\n",
+              "5    5600.0\n",
+              "6    3500.0\n",
+              "Name: Sales, dtype: float64"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Grouping by store ID\n",
+        "avgSet = df.groupby('StoreID')\n",
+        "\n",
+        "#Calculating the mean and displaying\n",
+        "avgSet['Sales'].mean()"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "u8qWroMxF4dl"
@@ -1307,12 +1502,197 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Total_Revenue</th>\n",
+              "      <th>Total_Discounts</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Category</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Clothing</th>\n",
+              "      <td>500</td>\n",
+              "      <td>50</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Electronics</th>\n",
+              "      <td>2000</td>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Groceries</th>\n",
+              "      <td>500</td>\n",
+              "      <td>50</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Total_Revenue  Total_Discounts\n",
+              "Category                                   \n",
+              "Clothing               500               50\n",
+              "Electronics           2000              100\n",
+              "Groceries              500               50"
+            ]
+          },
+          "execution_count": 23,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df_orders = pd.DataFrame({\n",
+        "    'Category': ['Electronics', 'Electronics', 'Clothing', 'Clothing', 'Groceries', 'Groceries'],\n",
+        "    'Order_ID': ['O1', 'O2', 'O3', 'O4', 'O5', 'O6'],\n",
+        "    'Price': [1000, 500, 100, 200, 50, 60],\n",
+        "    'Discount': [50, 25, 10, 20, 5, 6],\n",
+        "    'Quantity': [1, 2, 3, 1, 4, 5]\n",
+        "})\n",
+        "\n",
+        "#Defining Revenue and Discount\n",
+        "df_orders['revenue'] = df_orders['Price'] * df_orders['Quantity']\n",
+        "df_orders['totalDiscount'] = df_orders['Discount'] * df_orders['Quantity']\n",
+        "\n",
+        "grouped = df_orders.groupby('Category').agg(\n",
+        "    Total_Revenue=('revenue', 'sum'),\n",
+        "    Total_Discounts=('totalDiscount', 'sum')\n",
+        ")\n",
+        "\n",
+        "grouped"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Order with the Highest Revenue in Each Category:\n",
+            "       Category Order_ID  revenue\n",
+            "2     Clothing       O3      300\n",
+            "0  Electronics       O1     1000\n",
+            "5    Groceries       O6      300\n"
+          ]
+        }
+      ],
+      "source": [
+        "#order with the highest revenue\n",
+        "highestRevenueOrders = df_orders.loc[df_orders.groupby('Category')['revenue'].idxmax(), ['Category', 'Order_ID', 'revenue']]\n",
+        "print(\"\\nOrder with the Highest Revenue in Each Category:\\n\", highestRevenueOrders)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>avgDiscountperOrder</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Category</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Clothing</th>\n",
+              "      <td>15.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Electronics</th>\n",
+              "      <td>37.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Groceries</th>\n",
+              "      <td>5.5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             avgDiscountperOrder\n",
+              "Category                        \n",
+              "Clothing                    15.0\n",
+              "Electronics                 37.5\n",
+              "Groceries                    5.5"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Calculating Average discount per order\n",
+        "avgDiscountperOrder = df_orders.groupby('Category').agg(\n",
+        "    avgDiscountperOrder=('Discount', 'mean')\n",
+        ")\n",
+        "\n",
+        "avgDiscountperOrder"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ih9vkxLHuUc2"
       },
       "source": [
-        "#4. Handling Missing Data\n",
+        "# 4. Handling Missing Data\n",
         "\n",
         "You are provided with a dataset, `numeric_df`, containing numeric features from the Titanic dataset. Your task is to explore and handle the missing data systematically.\n",
         "\n"
@@ -1362,7 +1742,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 20,
       "metadata": {
         "id": "h7cvw4BcaFal"
       },
